#287 save progress.